site divided & fixed

--- a/business/templates/businessCreditBuilding/websiteCreation.html
+++ b/business/templates/businessCreditBuilding/websiteCreation.html
@@ -63,13 +63,23 @@
                         <li>Video Backgrounds</li>
                         <li>Premium Support</li>
                         <br>
-                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-                            <input type="hidden" name="cmd" value="_s-xclick">
-                            <input type="hidden" name="hosted_button_id" value="6B3MDEDP7HWVG">
-                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif"
-                                   border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1"
-                                 height="1">
+                        {#                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">#}
+                        {#                            <input type="hidden" name="cmd" value="_s-xclick">#}
+                        {#                            <input type="hidden" name="hosted_button_id" value="6B3MDEDP7HWVG">#}
+                        {#                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif"#}
+                        {#                                   border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">#}
+                        {#                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1"#}
+                        {#                                 height="1">#}
+                        {#                        </form>#}
+
+                        <form action="{% url 'business:charge' %}" method="post">
+                            {% csrf_token %}
+                            <input type="hidden" id="amount" name="amount" value="1999">
+                            <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                                    data-key="{{ stripe_key }}"
+                                    data-description="A Django Charge"
+                                    data-amount="1999"
+                                    data-locale="auto"></script>
                         </form>
 
                         <br> <a target="_blank" class="btn btn-primary"
@@ -115,15 +125,15 @@
                         <br> <br>
                         <div class="d-flex justify-content-between align-items-center">
 
-                            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-                                <input type="hidden" name="cmd" value="_s-xclick">
-                                <input type="hidden" name="hosted_button_id" value="NXXTQ4EYT9ZLN">
-                                <input type="image"
-                                       src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0"
-                                       name="submit" alt="PayPal - The safer, easier way to pay online!">
-                                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif"
-                                     width="1" height="1">
-                            </form>
+                           <form action="{% url 'business:charge' %}" method="post">
+                            {% csrf_token %}
+                            <input type="hidden" id="amount" name="amount" value="1999">
+                            <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                                    data-key="{{ stripe_key }}"
+                                    data-description="A Django Charge"
+                                    data-amount="1999"
+                                    data-locale="auto"></script>
+                        </form>
 
                         </div>
                         <br> <a target="_blank" class="btn btn-primary"
