--- a/business/templates/userData/BusinessCreditStepsStandalone.html
+++ b/business/templates/userData/BusinessCreditStepsStandalone.html
@@ -4,78 +4,130 @@
     </div>
 </div>
 <div class="room">
-<section class="main-content">
-    <div class="row">
-        <div class="col-md-12">
-            <iframe width="100%" height="355" src="https://www.youtube.com/embed/u4GqnIkb4cY" frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            <h3> Watch The Introduction Video To Understand How To Use The Extension</h3>
+    <section class="main-content">
+        <div class="row">
+            <div class="col-md-12">
+                <iframe width="100%" height="355" src="https://www.youtube.com/embed/u4GqnIkb4cY" frameborder="0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                <h3> Watch The Introduction Video To Understand How To Use The Extension</h3>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <form method="post">{% csrf_token %}
-                <div class="row mb-2">
-                    <div class="col-6">
-                        {{ form.first_name.label_tag }}{{ form.first_name }}
+        <div class="row">
+            <div class="col-md-12">
+                <form method="post">{% csrf_token %}
+                    <div class="row mb-2">
+                        <div class="col-6">
+                            {{ form.first_name.label_tag }}{{ form.first_name }}
+                        </div>
+                        <div class="col-6">
+                            {{ form.last_name.label_tag }}{{ form.last_name }}
+                        </div>
                     </div>
-                    <div class="col-6">
-                        {{ form.last_name.label_tag }}{{ form.last_name }}
+                    <div class="row mb-2">
+                        <div class="col-12">
+                            {{ form.email.label_tag }}{{ form.email }}
+                        </div>
                     </div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col-12">
-                        {{ form.email.label_tag }}{{ form.email }}
+                    <div class="row mb-2">
+                        <div class="col-12">
+                            {{ form.phone.label_tag }}{{ form.phone }}
+                        </div>
                     </div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col-12">
-                        {{ form.phone.label_tag }}{{ form.phone }}
+                    <div class="row mb-2">
+                        <div class="col-12 font-weight-bold">
+                            Choose The Business Credit Building Steps From The Dropdown That You Need
+                        </div>
                     </div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col-12 font-weight-bold">
-                        Choose The Business Credit Building Steps From The Dropdown That You Need
+                    <div class="row mb-2">
+                        <div class="col-12 d-flex flex-column">
+                            <div>
+                                <input type="checkbox" name="website" id="website">
+                                <label for="website">Website: $19.99 USD - monthly</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="toll_free" id="toll_free">
+                                <label for="toll_free">Toll Free Number: $29.99 USD - monthly</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="fax_number" id="fax_number">
+                                <label for="fax_number">Fax Number: $19.99 USD - monthly</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="domain" id="domain">
+                                <label for="domain">Domain: $13.99 USD - monthly</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="professional_email" id="professional_email">
+                                <label for="professional_email">Professional Email Address: $2.49 USD - monthly</label>
+                            </div>
+                            <div>
+                                <input type="text" name="domain_name" id="domain_name">
+                                <label for="domain_name">Domain name</label>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-12">
-                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="9F4VCNJP9XAYC">
-<table>
-<tr><td><input type="hidden" name="on0" value="Business Credit Building OPtions">Your Industry For Website *If You Chose The Website Option*</td></tr><tr><td><select name="os0">
-    <option value="All Business Credit Building Steps">All Business Credit Building Steps : $159.99 USD - monthly</option>
-    <option value="Toll Free Number">Toll Free Number</option>
-    <option value="Website">Website : $19.99 USD - monthly</option>
-    <option value="Fax Number">Fax Number : $19.99 USD - monthly</option>
-    <option value="Domain">Domain : $13.99 USD - monthly</option>
-    <option value="Professional Email Address">Professional Email Address : $2.49 USD - monthly</option>
-    <option value="Toll Free Number & Website & Fax Number">Toll Free Number & Website & Fax Number : $69.99 USD - monthly</option>
-    <option value="Domain & Professional Email Address">Domain & Professional Email Address : $15.99 USD - monthly</option>
-    <option value="Toll Free Number & Fax Number">Toll Free Number & Fax Number : $49.99 USD - monthly</option>
-</select> </td></tr>
-</table> <br>
-<div class="col-md-6">
-  <tr><td><input type="hidden" name="on1" value="Enter Domain Name You Need">Enter Domain Name You Need</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
-</div>
-<br>
-<input type="hidden" name="currency_code" value="USD">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
-                  </div>
-                </div>
-            </form>
-        </div>
-    </div>
+                    <div class="row">
+                        <div class="col-md-12" id="stripe-form">
+                            <div>Total: $<span id="total_amount">0</span></div>
+                            <script src="https://checkout.stripe.com/checkout.js"
+                                    class="stripe-button"
+                                    data-key="{{ stripe_key }}"
+                                    data-description="Business Credit Building Steps"
+                                    data-amount=""
+                                    data-locale="auto">
+                            </script>
+                        </div>
+                    </div>
 
-</section>
+                </form>
+            </div>
+        </div>
+
+
+    </section>
 </div>
 
 <style media="screen">
-  .room {
-    margin-bottom:10%;
-  }
+    .room {
+        margin-bottom: 10%;
+    }
 </style>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<script>
+    
+    function round(amount) {
+        var rounded = Math.round(amount*100)/100
+        return rounded
+    }
+    
+    function changeAmount(checked, price) {
+        var amount = Number($("#total_amount").html());
+        if (checked) {
+            $("#total_amount").html(round(amount + price))
+        } else {
+            $("#total_amount").html(round(amount - price))
+        }
+    }
+
+    $("#website").change(function () {
+        changeAmount(this.checked, 19.99)
+    });
+    $("#toll_free").change(function () {
+        changeAmount(this.checked, 29.99)
+    });
+    $("#fax_number").change(function () {
+        changeAmount(this.checked, 19.99)
+    });
+    $("#domain").change(function () {
+        changeAmount(this.checked, 13.99)
+    });
+    $("#professional_email").change(function () {
+        changeAmount(this.checked, 2.49)
+
+    });
+
+
+</script>
