--- a/business/templates/businessCreditBuilding/faxNumber.html
+++ b/business/templates/businessCreditBuilding/faxNumber.html
@@ -46,7 +46,7 @@
                         </ul>
                         <br>
                         <div class="d-flex justify-content-between align-items-center">
-                            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+                            <form action="{% url 'business:charge' %}" method="post">{% csrf_token %}
                                 <input type="hidden" name="cmd" value="_s-xclick">
                                 <input type="hidden" name="hosted_button_id" value="PE7HKSCE2WLKG">
                                 <table>
@@ -68,15 +68,24 @@
                                         </select></td>
                                     </tr>
                                 </table>
-                                <input type="image"
-                                       src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0"
-                                       name="submit" alt="PayPal - The safer, easier way to pay online!">
-                                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif"
-                                     width="1" height="1">
+                                {#                                <input type="image"#}
+                                {#                                       src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0"#}
+                                {#                                       name="submit" alt="PayPal - The safer, easier way to pay online!">#}
+                                {#                                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif"#}
+                                {#                                     width="1" height="1">#}
+                                <input type="hidden" id="amount" name="amount" value="1999">
+                                <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                                        data-key="{{ stripe_key }}"
+                                        data-description="A Django Charge"
+                                        data-amount="1999"
+                                        data-locale="auto"></script>
+                            </form>
+
+
                             </form>
                         </div>
                         <br>
-                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+                            <form action="{% url 'business:charge' %}" method="post">{% csrf_token %}
                             <input type="hidden" name="cmd" value="_s-xclick">
                             <input type="hidden" name="hosted_button_id" value="S5THWXPLFHJTC">
                             <table>
@@ -97,10 +106,12 @@
                                     </select></td>
                                 </tr>
                             </table>
-                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif"
-                                   border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1"
-                                 height="1">
+                                <input type="hidden" id="amount" name="amount" value="1999">
+                                <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                                        data-key="{{ stripe_key }}"
+                                        data-description="A Django Charge"
+                                        data-amount="1999"
+                                        data-locale="auto"></script>
                         </form>
                         <br> <a target="_blank" class="btn btn-primary"
                                 href="https://millennialsbuildinggreatness.com/products/fax-number-standard-package-annual-program-50-off-3-monthly-payments-with-viabill-0-interest">Click
@@ -130,7 +141,7 @@
                         </ul>
                         <br>
                         <div class="d-flex justify-content-between align-items-center">
-                            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                            <form action="{% url 'business:charge' %}" method="post">{% csrf_token %}
                                 <input type="hidden" name="cmd" value="_s-xclick">
                                 <input type="hidden" name="hosted_button_id" value="DGGRGAKE5NAU4">
                                 <table>
@@ -152,15 +163,16 @@
                                         </select></td>
                                     </tr>
                                 </table>
-                                <input type="image"
-                                       src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0"
-                                       name="submit" alt="PayPal - The safer, easier way to pay online!">
-                                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif"
-                                     width="1" height="1">
+                                <input type="hidden" id="amount" name="amount" value="1999">
+                                <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                                        data-key="{{ stripe_key }}"
+                                        data-description="A Django Charge"
+                                        data-amount="1999"
+                                        data-locale="auto"></script>
                             </form>
                         </div>
                         <br>
-                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+                            <form action="{% url 'business:charge' %}" method="post">{% csrf_token %}
                             <input type="hidden" name="cmd" value="_s-xclick">
                             <input type="hidden" name="hosted_button_id" value="396AUBB5YPWS8">
                             <table>
@@ -181,10 +193,12 @@
                                     </select></td>
                                 </tr>
                             </table>
-                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif"
-                                   border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1"
-                                 height="1">
+                                <input type="hidden" id="amount" name="amount" value="1999">
+                                <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                                        data-key="{{ stripe_key }}"
+                                        data-description="A Django Charge"
+                                        data-amount="1999"
+                                        data-locale="auto"></script>
                         </form>
 
                         <br> <a target="_blank" class="btn btn-primary"
