--- a/getdinerotoday/templates/landingpages/webinar.html
+++ b/getdinerotoday/templates/landingpages/webinar.html
@@ -8,7 +8,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-lg-7 col-md-12">
-        <h1 class="title"><span>Webinar Financing Page</h1>
+        <h1 class="title">Webinar Financing Page</h1>
         <p>Get Our Special Financing Offers</p>
       </div>
     </div>
