--- a/goals/templates/goals/create_my_portal.html
+++ b/goals/templates/goals/create_my_portal.html
@@ -38,7 +38,7 @@
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/_EwOUUkg7hA" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
-                <a href="https://www.youtube.com/watch?v=_EwOUUkg7hA" class="btn btn-primary btn-block">Click Here To
+                <a href="https://www.youtube.com/watch?v=_EwOUUkg7hA" target="_blank" class="btn btn-primary btn-block">Click Here To
                     Watch In Full Screen</a>
 
             </div>
