--- a/business/templates/userData/BusinessCreditStepsStandalone.html
+++ b/business/templates/userData/BusinessCreditStepsStandalone.html
@@ -69,6 +69,44 @@
                                 <label for="domain_name">Domain name:</label>
                                 <input type="text" name="domain_name" id="domain_name">
                             </div>
+                            <div>
+                                <label for="industry">Select Industry:</label><br>
+                                <select name="industry" id="industry" class="custom-select w-100">
+                                    <option>Electrician</option>
+                                    <option>Garderner</option>
+                                    <option>Tattoo Artist</option>
+                                    <option>Photography</option>
+                                    <option>Limo Service</option>
+                                    <option>Nutrition Advisor</option>
+                                    <option>Life Coach</option>
+                                    <option>Vetirinary clinic</option>
+                                    <option>Laundromat</option>
+                                    <option>Fitness Club</option>
+                                    <option>Dentist</option>
+                                    <option>Consulting</option>
+                                    <option>Auto Repair</option>
+                                    <option>Tutor</option>
+                                    <option>Bakery</option>
+                                    <option>Financial Advisor</option>
+                                    <option>Lawyer</option>
+                                    <option>Marketing Agency</option>
+                                    <option>Trucking</option>
+                                    <option>Locksmith</option>
+                                    <option>Medical Clinic</option>
+                                    <option>Dance Studio</option>
+                                    <option>Carpenter</option>
+                                    <option>Moving Company</option>
+                                    <option>Hair Salon</option>
+                                    <option>Cleaning Service</option>
+                                    <option>Car Dealer</option>
+                                    <option>Portfolio</option>
+                                    <option>Real Estate</option>
+                                    <option>Preschool</option>
+                                    <option>Spa Services</option>
+                                    <option>Physical Therapist</option>
+                                </select>
+                            </div>
+
                             <div style="height: 1px; background-color: black" class="mt-3"></div>
                             <div class="text-center mb-2 font-weight-bold">
                                 Need All The Steps? Get 13% Off The Monthly Package With Our Business Builder Program
@@ -101,12 +139,52 @@
                             </div>
                             <div>
                                 <input type="checkbox" name="professional_email_year" id="professional_email_year">
-                                <label for="professional_email_year">Professional Email Address: $42 USD - yearly</label>
+                                <label for="professional_email_year">Professional Email Address: $42 USD -
+                                    yearly</label>
                             </div>
                             <div>
                                 <label for="domain_name_year">Domain name:</label>
                                 <input type="text" name="domain_name_year" id="domain_name_year">
                             </div>
+                            <div>
+                                <label for="industry_year">Select Industry:</label><br>
+                                <select name="industry_year" id="industry_year" class="custom-select w-100">
+                                    <option>Electrician</option>
+                                    <option>Garderner</option>
+                                    <option>Tattoo Artist</option>
+                                    <option>Photography</option>
+                                    <option>Limo Service</option>
+                                    <option>Nutrition Advisor</option>
+                                    <option>Life Coach</option>
+                                    <option>Vetirinary clinic</option>
+                                    <option>Laundromat</option>
+                                    <option>Fitness Club</option>
+                                    <option>Dentist</option>
+                                    <option>Consulting</option>
+                                    <option>Auto Repair</option>
+                                    <option>Tutor</option>
+                                    <option>Bakery</option>
+                                    <option>Financial Advisor</option>
+                                    <option>Lawyer</option>
+                                    <option>Marketing Agency</option>
+                                    <option>Trucking</option>
+                                    <option>Locksmith</option>
+                                    <option>Medical Clinic</option>
+                                    <option>Dance Studio</option>
+                                    <option>Carpenter</option>
+                                    <option>Moving Company</option>
+                                    <option>Hair Salon</option>
+                                    <option>Cleaning Service</option>
+                                    <option>Car Dealer</option>
+                                    <option>Portfolio</option>
+                                    <option>Real Estate</option>
+                                    <option>Preschool</option>
+                                    <option>Spa Services</option>
+                                    <option>Physical Therapist</option>
+                                </select>
+                            </div>
+
+
                             <div style="height: 1px; background-color: black" class="mt-3"></div>
                             <div class="text-center mb-2 font-weight-bold">
                                 Need All The Steps? Get The Business Builder Annual Program for $999 and save $50
