--- a/business/templates/businessCreditBuilding/tollFreeNumber.html
+++ b/business/templates/businessCreditBuilding/tollFreeNumber.html
@@ -35,117 +35,143 @@
             </div>
         </div>
         <br> <br>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/JGqFJVfQKOU" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    <div class="card-body">
-                        <h3>Office Standard Program</h3>
-                        <ul>
-                            <li>Unlimited calls within the US/CA**</li>
-                            <li>Team messaging and collaboration</li>
-                            <li>Unlimited audio meetings</li>
-                            <li>Unlimited video conferencing (up to 4 people per meeting)</li>
-                            <li>Toll-free or local number</li>
-                            <li>1,000 toll-free minutes/month</li>
-                            <li>Voicemail-to-text</li>
-                            <li> Unlimited internet fax</li>
-                        </ul>
-                        <br>
-                        <div class="d-flex justify-content-between align-items-center">
-                        </div>
-                        <br> <a target="_blank" class="btn btn-primary"
-                                href="https://store22617285.ecwid.com/Toll-Free-Number-Standard-Package-p168074371">Get
-                        Monthly Package</a>
-                        <br><br> <a target="_blank" class="btn btn-primary"
-                                    href="https://millennialsbuildinggreatness.com/products/toll-free-office-standard-yearly-package-3-monthly-payment-option-with-via-bill-0-interest">Click
-                        Here To Get 50% Off Yearly Package</a>
-                        <br><br>
-                        <a target="_blank" class="btn btn-primary"
-                           href="https://millennialsbuildinggreatness.com/products/toll-free-office-standard-yearly-package-3-monthly-payment-option-with-via-bill-0-interest">Yearly
-                            Package 3 Month Payment Option</a>
-                        <br><br>
-                        <a target="_blank" class="btn btn-primary" href="https://millennialbusinessbuilders.com/voip">See
-                            Full Toll Free Number Website</a>
-
-                    </div>
-
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/Y6sSg7FkO-I" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    <div class="card-body">
-                        <h3>Office Premium Program</h3>
-                        <ul>
-                            <li>Unlimited calls within the US/CA**</li>
-                            <li>Team messaging and collaboration</li>
-                            <li>Unlimited audio meetings</li>
-                            <li>Unlimited video conferencing (up to 4 people per meeting)</li>
-                            <li>Toll-free or local number</li>
-                            <li>2,500 toll-free minutes/month</li>
-                            <li>Voicemail-to-text</li>
-                            <li> Unlimited internet fax</li>
-                            <li>Automatic call recording</li>
-                        </ul>
-                        <br>
-                        <div class="d-flex justify-content-between align-items-center">
-                        </div>
-                        <br> <a target="_blank" class="btn btn-primary"
-                                href="https://store22617285.ecwid.com/Toll-Free-Number-Premium-Package-p168074394">Get
-                        Monthly Package</a>
-                        <br><br><a target="_blank" class="btn btn-primary"
-                                   href="https://millennialsbuildinggreatness.com/products/toll-free-office-premium-yearly-package-3-monthly-payment-option-with-via-bill-0-interest">Click
-                        Here To Get 50% Off Yearly Package</a>
-                        <br><br>
-                        <a target="_blank" class="btn btn-primary"
-                           href="https://millennialsbuildinggreatness.com/products/toll-free-office-premium-yearly-package-3-monthly-payment-option-with-via-bill-0-interest">Yearly
-                            Package 3 Month Payment Option</a>
-                        <br> <br>
-                        <a target="_blank" class="btn btn-primary" href="https://millennialbusinessbuilders.com/voip">See
-                            Full Toll Free Number Website</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
+        <div class="row justify-content-center">
+            {#            <div class="col-md-4">#}
+            {#                <div class="card mb-4 shadow-sm">#}
+            {#                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/JGqFJVfQKOU" frameborder="0"#}
+            {#                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"#}
+            {#                            allowfullscreen></iframe>#}
+            {#                    <div class="card-body">#}
+            {#                        <h3>Office Standard Program</h3>#}
+            {#                        <ul>#}
+            {#                            <li>Unlimited calls within the US/CA**</li>#}
+            {#                            <li>Team messaging and collaboration</li>#}
+            {#                            <li>Unlimited audio meetings</li>#}
+            {#                            <li>Unlimited video conferencing (up to 4 people per meeting)</li>#}
+            {#                            <li>Toll-free or local number</li>#}
+            {#                            <li>1,000 toll-free minutes/month</li>#}
+            {#                            <li>Voicemail-to-text</li>#}
+            {#                            <li> Unlimited internet fax</li>#}
+            {#                        </ul>#}
+            {#                        <br>#}
+            {#                        <div class="d-flex justify-content-between align-items-center">#}
+            {#                        </div>#}
+            {#                        <br> <a target="_blank" class="btn btn-primary"#}
+            {#                                href="https://store22617285.ecwid.com/Toll-Free-Number-Standard-Package-p168074371">Get#}
+            {#                        Monthly Package</a>#}
+            {#                        <br><br> <a target="_blank" class="btn btn-primary"#}
+            {#                                    href="https://millennialsbuildinggreatness.com/products/toll-free-office-standard-yearly-package-3-monthly-payment-option-with-via-bill-0-interest">Click#}
+            {#                        Here To Get 50% Off Yearly Package</a>#}
+            {#                        <br><br>#}
+            {#                        <a target="_blank" class="btn btn-primary"#}
+            {#                           href="https://millennialsbuildinggreatness.com/products/toll-free-office-standard-yearly-package-3-monthly-payment-option-with-via-bill-0-interest">Yearly#}
+            {#                            Package 3 Month Payment Option</a>#}
+            {#                        <br><br>#}
+            {#                        <a target="_blank" class="btn btn-primary" href="https://millennialbusinessbuilders.com/voip">See#}
+            {#                            Full Toll Free Number Website</a>#}
+            {##}
+            {#                    </div>#}
+            {##}
+            {#                </div>#}
+            {#            </div>#}
+            {#            <div class="col-md-4">#}
+            {#                <div class="card mb-4 shadow-sm">#}
+            {#                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/Y6sSg7FkO-I" frameborder="0"#}
+            {#                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"#}
+            {#                            allowfullscreen></iframe>#}
+            {#                    <div class="card-body">#}
+            {#                        <h3>Office Premium Program</h3>#}
+            {#                        <ul>#}
+            {#                            <li>Unlimited calls within the US/CA**</li>#}
+            {#                            <li>Team messaging and collaboration</li>#}
+            {#                            <li>Unlimited audio meetings</li>#}
+            {#                            <li>Unlimited video conferencing (up to 4 people per meeting)</li>#}
+            {#                            <li>Toll-free or local number</li>#}
+            {#                            <li>2,500 toll-free minutes/month</li>#}
+            {#                            <li>Voicemail-to-text</li>#}
+            {#                            <li> Unlimited internet fax</li>#}
+            {#                            <li>Automatic call recording</li>#}
+            {#                        </ul>#}
+            {#                        <br>#}
+            {#                        <div class="d-flex justify-content-between align-items-center">#}
+            {#                        </div>#}
+            {#                        <br> <a target="_blank" class="btn btn-primary"#}
+            {#                                href="https://store22617285.ecwid.com/Toll-Free-Number-Premium-Package-p168074394">Get#}
+            {#                        Monthly Package</a>#}
+            {#                        <br><br><a target="_blank" class="btn btn-primary"#}
+            {#                                   href="https://millennialsbuildinggreatness.com/products/toll-free-office-premium-yearly-package-3-monthly-payment-option-with-via-bill-0-interest">Click#}
+            {#                        Here To Get 50% Off Yearly Package</a>#}
+            {#                        <br><br>#}
+            {#                        <a target="_blank" class="btn btn-primary"#}
+            {#                           href="https://millennialsbuildinggreatness.com/products/toll-free-office-premium-yearly-package-3-monthly-payment-option-with-via-bill-0-interest">Yearly#}
+            {#                            Package 3 Month Payment Option</a>#}
+            {#                        <br> <br>#}
+            {#                        <a target="_blank" class="btn btn-primary" href="https://millennialbusinessbuilders.com/voip">See#}
+            {#                            Full Toll Free Number Website</a>#}
+            {#                    </div>#}
+            {#                </div>#}
+            {#            </div>#}
+            <div class="col-md-6">
                 <div class="card mb-4 shadow-sm">
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/x-GP13UrVVs" frameborder="0"
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                     <div class="card-body">
                         <h3>Office Ultimate Program</h3>
-                        <ul>
-                            <li>Unlimited calls within the US/CA**</li>
-                            <li>Team messaging and collaboration</li>
-                            <li>Unlimited audio meetings</li>
-                            <li>Unlimited video conferencing (up to 4 people per meeting)</li>
-                            <li>Toll-free or local number</li>
-                            <li>10,000 toll-free minutes/month</li>
-                            <li>Voicemail-to-text</li>
-                            <li> Unlimited internet fax</li>
-                            <li>Automatic call recording</li>
-                        </ul>
+
+                        <li>Unlimited calls within the US/CA**</li>
+                        <li>Team messaging and collaboration</li>
+                        <li>Unlimited audio meetings</li>
+                        <li>Unlimited video conferencing (up to 4 people per meeting)</li>
+                        <li>Toll-free or local number</li>
+                        <li>10,000 toll-free minutes/month</li>
+                        <li>Voicemail-to-text</li>
+                        <li> Unlimited internet fax</li>
+                        <li>Automatic call recording</li>
+
                         <br>
-                        <div class="d-flex justify-content-between align-items-center">
+                        <div class="text-center">
+                            Monthly option - $40 USD:<br>
+                            <form action="{% url 'business:charge' %}" method="post">
+                                {% csrf_token %}
+                                <input type="hidden" id="amount" name="amount" value="4000">
+                                <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                                        data-key="{{ stripe_key }}"
+                                        data-description="A Django Charge"
+                                        data-amount="4000"
+                                        data-locale="auto">
+                                </script>
+                            </form>
                         </div>
-                        <br> <a target="_blank" class="btn btn-primary"
-                                href="https://store22617285.ecwid.com/Toll-Free-Number-Ultimate-Package-p168077135">Get
-                        Monthly Package</a>
                         <br>
-                        <br> <a target="_blank" class="btn btn-primary"
-                                href="https://millennialsbuildinggreatness.com/products/toll-free-office-ultimate-yearly-package-3-monthly-payment-option-with-via-bill-0-interest">Click
-                        Here To Get 50% Off Yearly Package</a>
-                        <br><br>
-                        <a target="_blank" class="btn btn-primary"
-                           href="https://millennialsbuildinggreatness.com/products/toll-free-office-ultimate-yearly-package-3-monthly-payment-option-with-via-bill-0-interest">Yearly
-                            Package 3 Month Payment Option</a>
-                        <br><br>
-                        <a target="_blank" class="btn btn-primary" href="https://millennialbusinessbuilders.com/voip">See
-                            Full Toll Free Number Website</a>
+                        <div class="text-center">
+                            Save 50% with annual option - $420 USD:<br>
+                            <form action="{% url 'business:charge' %}" method="post">
+                                {% csrf_token %}
+                                <input type="hidden" id="amount" name="amount" value="42000">
+                                <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                                        data-key="{{ stripe_key }}"
+                                        data-description="A Django Charge"
+                                        data-amount="42000"
+                                        data-locale="auto">
+                                </script>
+                            </form>
+                        </div>
+
+                        {#                        <br> <a target="_blank" class="btn btn-primary"#}
+                        {#                                href="https://store22617285.ecwid.com/Toll-Free-Number-Ultimate-Package-p168077135">Get#}
+                        {#                        Monthly Package</a>#}
+                        {#                        <br>#}
+                        {#                        <br> <a target="_blank" class="btn btn-primary"#}
+                        {#                                href="https://millennialsbuildinggreatness.com/products/toll-free-office-ultimate-yearly-package-3-monthly-payment-option-with-via-bill-0-interest">Click#}
+                        {#                        Here To Get 50% Off Yearly Package</a>#}
+                        {#                        <br><br>#}
+                        {#                        <a target="_blank" class="btn btn-primary"#}
+                        {#                           href="https://millennialsbuildinggreatness.com/products/toll-free-office-ultimate-yearly-package-3-monthly-payment-option-with-via-bill-0-interest">Yearly#}
+                        {#                            Package 3 Month Payment Option</a>#}
+                        {#                        <br><br>#}
+                        {#                        <a target="_blank" class="btn btn-primary" href="https://millennialbusinessbuilders.com/voip">See#}
+                        {#                            Full Toll Free Number Website</a>#}
                     </div>
 
                 </div>
