--- a/business/templates/businessCreditBuilding/websiteCreation.html
+++ b/business/templates/businessCreditBuilding/websiteCreation.html
@@ -41,28 +41,28 @@
              <iframe src="https://www.websitebuilder.ai/" width="90%" height="750px"></iframe>
            </div>
          </div> -->
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card mb-4 shadow-sm">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/N_gNlNoj1ow" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    <div class="card-body">
-                        <h4>Professional
-                            Small Business & Entrepreneurs</h4>
-                        <li>AI Website Builder</li>
-                        <li>Unlimited Bandwidth</li>
-                        <li>Unlimited Storage</li>
-                        <li>Connect your Domain</li>
-                        <li>You get a Free Secure SSL certificate (Value $100)</li>
-                        <li>Daily Website Backups</li>
-                        <li>No Bookmark Branding</li>
-                        <li>Free Hosting</li>
-                        <li>Mobile Website</li>
-                        <li>Advanced Analytics</li>
-                        <li>Video Backgrounds</li>
-                        <li>Premium Support</li>
-                        <br>
+        <div class="row justify-content-center">
+{#            <div class="col-md-6">#}
+{#                <div class="card mb-4 shadow-sm">#}
+{#                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/N_gNlNoj1ow" frameborder="0"#}
+{#                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"#}
+{#                            allowfullscreen></iframe>#}
+{#                    <div class="card-body">#}
+{#                        <h4>Professional#}
+{#                            Small Business & Entrepreneurs</h4>#}
+{#                        <li>AI Website Builder</li>#}
+{#                        <li>Unlimited Bandwidth</li>#}
+{#                        <li>Unlimited Storage</li>#}
+{#                        <li>Connect your Domain</li>#}
+{#                        <li>You get a Free Secure SSL certificate (Value $100)</li>#}
+{#                        <li>Daily Website Backups</li>#}
+{#                        <li>No Bookmark Branding</li>#}
+{#                        <li>Free Hosting</li>#}
+{#                        <li>Mobile Website</li>#}
+{#                        <li>Advanced Analytics</li>#}
+{#                        <li>Video Backgrounds</li>#}
+{#                        <li>Premium Support</li>#}
+{#                        <br>#}
                         {#                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">#}
                         {#                            <input type="hidden" name="cmd" value="_s-xclick">#}
                         {#                            <input type="hidden" name="hosted_button_id" value="6B3MDEDP7HWVG">#}
@@ -71,29 +71,29 @@
                         {#                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1"#}
                         {#                                 height="1">#}
                         {#                        </form>#}
-
-                        <form action="{% url 'business:charge' %}" method="post">
-                            {% csrf_token %}
-                            <input type="hidden" id="amount" name="amount" value="1999">
-                            <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-                                    data-key="{{ stripe_key }}"
-                                    data-description="A Django Charge"
-                                    data-amount="1999"
-                                    data-locale="auto"></script>
-                        </form>
-
-                        <br> <a target="_blank" class="btn btn-primary"
-                                href="https://millennialsbuildinggreatness.com/products/professional-small-business-entrepreneurs-annual-package-via-bill-payment-option">Click
-                        Here To Get 20% Off Yearly Package</a>
-                        <br><br>
-                        <a target="_blank" class="btn btn-primary"
-                           href="https://millennialsbuildinggreatness.com/products/professional-small-business-entrepreneurs-annual-package-via-bill-payment-option">Yearly
-                            Package 3 Month Payment Option</a>
-
-                    </div>
-
-                </div>
-            </div>
+{##}
+{#                        <form action="{% url 'business:charge' %}" method="post">#}
+{#                            {% csrf_token %}#}
+{#                            <input type="hidden" id="amount" name="amount" value="1999">#}
+{#                            <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"#}
+{#                                    data-key="{{ stripe_key }}"#}
+{#                                    data-description="A Django Charge"#}
+{#                                    data-amount="1999"#}
+{#                                    data-locale="auto"></script>#}
+{#                        </form>#}
+{##}
+{#                        <br> <a target="_blank" class="btn btn-primary"#}
+{#                                href="https://millennialsbuildinggreatness.com/products/professional-small-business-entrepreneurs-annual-package-via-bill-payment-option">Click#}
+{#                        Here To Get 20% Off Yearly Package</a>#}
+{#                        <br><br>#}
+{#                        <a target="_blank" class="btn btn-primary"#}
+{#                           href="https://millennialsbuildinggreatness.com/products/professional-small-business-entrepreneurs-annual-package-via-bill-payment-option">Yearly#}
+{#                            Package 3 Month Payment Option</a>#}
+{##}
+{#                    </div>#}
+{##}
+{#                </div>#}
+{#            </div>#}
             <div class="col-md-6">
                 <div class="card mb-4 shadow-sm">
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/GZmD3a3gxv4" frameborder="0"
@@ -122,27 +122,41 @@
                         <li>Product Reviews</li>
                         <li>Abandoned Cart Saver</li>
                         <li>Android and iOS Store Management App</li>
-                        <br> <br>
-                        <div class="d-flex justify-content-between align-items-center">
-
-                           <form action="{% url 'business:charge' %}" method="post">
-                            {% csrf_token %}
-                            <input type="hidden" id="amount" name="amount" value="1999">
-                            <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-                                    data-key="{{ stripe_key }}"
-                                    data-description="A Django Charge"
-                                    data-amount="1999"
-                                    data-locale="auto"></script>
-                        </form>
-
+                        <br>
+                        <div class="text-center">
+                            Monthly option - $50 USD:<br>
+                            <form action="{% url 'business:charge' %}" method="post">
+                                {% csrf_token %}
+                                <input type="hidden" id="amount" name="amount" value="5000">
+                                <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                                        data-key="{{ stripe_key }}"
+                                        data-description="A Django Charge"
+                                        data-amount="5000"
+                                        data-locale="auto">
+                                </script>
+                            </form>
                         </div>
-                        <br> <a target="_blank" class="btn btn-primary"
-                                href="https://millennialsbuildinggreatness.com/products/business-e-commerce-annual-package-via-bill-payment-option">Click
-                        Here To Get 20% Off Yearly Package</a>
-                        <br><br>
-                        <a target="_blank" class="btn btn-primary"
-                           href="https://millennialsbuildinggreatness.com/products/business-e-commerce-annual-package-via-bill-payment-option">Yearly
-                            Package 3 Month Payment Option</a>
+                        <br>
+                        <div class="text-center">
+                            Save 50% with annual option - $300 USD:<br>
+                            <form action="{% url 'business:charge' %}" method="post">
+                                {% csrf_token %}
+                                <input type="hidden" id="amount" name="amount" value="30000">
+                                <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                                        data-key="{{ stripe_key }}"
+                                        data-description="A Django Charge"
+                                        data-amount="30000"
+                                        data-locale="auto">
+                                </script>
+                            </form>
+                        </div>
+{#                        <br> <a target="_blank" class="btn btn-primary"#}
+{#                                href="https://millennialsbuildinggreatness.com/products/business-e-commerce-annual-package-via-bill-payment-option">Click#}
+{#                        Here To Get 20% Off Yearly Package</a>#}
+{#                        <br><br>#}
+{#                        <a target="_blank" class="btn btn-primary"#}
+{#                           href="https://millennialsbuildinggreatness.com/products/business-e-commerce-annual-package-via-bill-payment-option">Yearly#}
+{#                            Package 3 Month Payment Option</a>#}
                     </div>
 
                 </div>
