--- a/business/templates/creditrepair/creditrepairplan8.html
+++ b/business/templates/creditrepair/creditrepairplan8.html
@@ -250,28 +250,28 @@
                             <tr>
                                 <td>Collections On Your Credit Report</td>
                                 <td><a href="{% url 'creditcourse:maincreditfile' %}" class="btn btn-primary">Click Here To
-                                    Have Us Fix Your Credit</a></td>
+                                    Go To Our Credit Course</a></td>
                             </tr>
                             </tbody>
                             <tbody>
                             <tr>
                                 <td>Too Many Inquiries On Your Credit Report</td>
                                 <td><a href="{% url 'creditcourse:maincreditfile' %}" class="btn btn-primary">Click Here To
-                                    Have Us Fix Your Credit</a></td>
+                                    Go To Our Credit Course</a></td>
                             </tr>
                             </tbody>
                             <tbody>
                             <tr>
                                 <td>Missed Payments On Your Credit Report</td>
                                 <td><a href="{% url 'creditcourse:maincreditfile' %}" class="btn btn-primary">Click Here To
-                                    Have Us Fix Your Credit</a></td>
+                                    Go To Our Credit Course</a></td>
                             </tr>
                             </tbody>
                             <tbody>
                             <tr>
                                 <td>High Credit Card Utilization</td>
                                 <td><a href="{% url 'creditcourse:maincreditfile' %}" class="btn btn-primary">Click Here To
-                                    Have Us Fix Your Credit</a></td>
+                                    Go To Our Credit Course</a></td>
                             </tr>
                             </tbody>
                         </table>
