--- a/business/templates/creditrepair/creditrepairplan9.html
+++ b/business/templates/creditrepair/creditrepairplan9.html
@@ -214,7 +214,7 @@
                                     it’s about $30 to get started, then finance the rest in monthly payments.
                                 </td>
                                 <td>We want to leverage this primary tradeline to increase our credit to lower our
-                                    utilization to boost our credit score. 
+                                    utilization to boost our credit score.
                                 </td>
                                 <td><a href="https://www.oxpublishing.com/credit/p7/?aff=XX-7D2ZYX" target="_blank">
                                     <button type="submit" class="btn btn-primary" name="signup"
@@ -250,28 +250,28 @@
                             <tr>
                                 <td>Collections On Your Credit Report</td>
                                 <td><a href="{% url 'creditcourse:maincreditfile' %}" class="btn btn-primary">Click Here To
-                                    Have Us Fix Your Credit</a></td>
+                                    Go To Our Credit Course</a></td>
                             </tr>
                             </tbody>
                             <tbody>
                             <tr>
                                 <td>Too Many Inquiries On Your Credit Report</td>
                                 <td><a href="{% url 'creditcourse:maincreditfile' %}" class="btn btn-primary">Click Here To
-                                    Have Us Fix Your Credit</a></td>
+                                    Go To Our Credit Course</a></td>
                             </tr>
                             </tbody>
                             <tbody>
                             <tr>
                                 <td>Missed Payments On Your Credit Report</td>
                                 <td><a href="{% url 'creditcourse:maincreditfile' %}" class="btn btn-primary">Click Here To
-                                    Have Us Fix Your Credit</a></td>
+                                    Go To Our Credit Course</a></td>
                             </tr>
                             </tbody>
                             <tbody>
                             <tr>
                                 <td>High Credit Card Utilization</td>
                                 <td><a href="{% url 'creditcourse:maincreditfile' %}" class="btn btn-primary">Click Here To
-                                    Have Us Fix Your Credit</a></td>
+                                    Go To Our Credit Course</a></td>
                             </tr>
                             </tbody>
                         </table>
