--- a/business/templates/home/upgrade.html
+++ b/business/templates/home/upgrade.html
@@ -65,7 +65,7 @@
                     <img src="https://getdinerotoday.herokuapp.com/static/images/klarna-og.jpg"
                          height="270px" width="100%" alt="">
                     <div class="card-body">
-                        <h4 class="card-text"><b>Credit Builder Plus</b></h4>
+                        <h4 class="card-text"><b>Financing From 12-36 Months</b></h4>
                         <h5 class="card-text">Purchase Now & Pay Over The Next 12-36 Months At 0%-10% Interest</h5>
                         <h5 class="card-text">Watch Video Below To See How To Purchase With Payment Option</h5>
                         <iframe width="100%" height="315" src="https://www.youtube.com/embed/sJPh6dw4O0Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
