--- a/chromeextension/templates/base-chromeextension.html
+++ b/chromeextension/templates/base-chromeextension.html
@@ -24,7 +24,7 @@
                     {% endif %}
                     <li class="nav-item">
                         <a href="{% url 'chromeextension:chromeextensionindex' %}" class="nav-link"><span
-                                class="toggle-none">Chrome Extension App For Python</span></a>
+                                class="toggle-none">Introduction Video Page For Chrome Extension Portal</span></a>
                     </li>
                     <li class="nav-item">
                         <a href="{% url 'chromeextension:moneyforbusinesscredit' %}" class="nav-link"><span
