--- a/business/templates/creditrepair/creditrepairplan11.html
+++ b/business/templates/creditrepair/creditrepairplan11.html
@@ -249,21 +249,21 @@
                             <tr>
                                 <td>Collections On Your Credit Report</td>
                                 <td><a href="{% url 'creditcourse:maincreditfile' %}" class="btn btn-primary">Click Here To
-                                    Have Us Fix Your Credit</a></td>
+                                    Go To Our Credit Course</a></td>
                             </tr>
                             </tbody>
                             <tbody>
                             <tr>
                                 <td>Too Many Inquiries On Your Credit Report</td>
                                 <td><a href="{% url 'creditcourse:maincreditfile' %}" class="btn btn-primary">Click Here To
-                                    Have Us Fix Your Credit</a></td>
+                                    Go To Our Credit Course</a></td>
                             </tr>
                             </tbody>
                             <tbody>
                             <tr>
                                 <td>High Credit Card Utilization</td>
                                 <td><a href="{% url 'creditcourse:maincreditfile' %}" class="btn btn-primary">Click Here To
-                                    Have Us Fix Your Credit</a></td>
+                                    Go To Our Credit Course</a></td>
                             </tr>
                             </tbody>
                         </table>
