--- a/business/templates/creditrepair/creditrepairplan17.html
+++ b/business/templates/creditrepair/creditrepairplan17.html
@@ -72,7 +72,7 @@
                                     tradeline.
                                 </td>
                                 <td>We want to leverage this primary tradeline to increase our credit to lower our
-                                    utilization to boost our credit score. 
+                                    utilization to boost our credit score.
                                 </td>
                                 <td><a href="https://newcoastdirect.com" target="_blank">
                                     <button type="submit" class="btn btn-primary" name="signup"
@@ -250,7 +250,7 @@
                             <tr>
                                 <td>High Credit Card Utilization</td>
                                 <td><a href="{% url 'creditcourse:maincreditfile' %}" class="btn btn-primary">Click Here To
-                                    Have Us Fix Your Credit</a></td>
+                                    Go To Our Credit Course</a></td>
                             </tr>
                             </tbody>
                         </table>
