--- a/business/templates/businessCreditBuilding/websiteCreation.html
+++ b/business/templates/businessCreditBuilding/websiteCreation.html
@@ -96,15 +96,11 @@
 {#            </div>#}
             <div class="col-md-6">
                 <div class="card mb-4 shadow-sm">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/GZmD3a3gxv4" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                            <iframe width="100%" height="315" src="https://www.youtube.com/embed/WabAwOVDyLo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="card-body">
-                        <h4>Business
-                            E-Commerce & Online Stores</h4>
+                        <h4>Premium Website & Website Builder</h4>
 
                         <li>All Professional Plan Features + E-Commerce / Online Store</li>
-                        <li>AI Website Builder</li>
                         <li>Connect Your Domain</li>
                         <li>You get a Free Secure SSL certificate (Value $100)</li>
                         <li>Unlimited Store Products</li>
@@ -116,12 +112,6 @@
                         <li>Inventory Management</li>
                         <li>Discount Coupons</li>
                         <li>Automated Shipping & Tax Calculator</li>
-                        <li>Advertise On Major Marketplaces</li>
-                        <li>Sell On Google</li>
-                        <li>Sell On Ebay</li>
-                        <li>Product Reviews</li>
-                        <li>Abandoned Cart Saver</li>
-                        <li>Android and iOS Store Management App</li>
                         <br>
                         <div class="text-center">
                             Monthly option - $50 USD:<br>
