--- a/business/templates/websiteCreation.html
+++ b/business/templates/websiteCreation.html
@@ -44,19 +44,13 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="card mb-4 shadow-sm">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/N_gNlNoj1ow" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
                     <div class="card-body">
-                        <h4>Professional
-                            Small Business & Entrepreneurs</h4>
-                        <li>AI Website Builder</li>
+                        <h4>Professional Website & Website Builder</h4>
                         <li>Unlimited Bandwidth</li>
                         <li>Unlimited Storage</li>
                         <li>Connect your Domain</li>
                         <li>You get a Free Secure SSL certificate (Value $100)</li>
                         <li>Daily Website Backups</li>
-                        <li>No Bookmark Branding</li>
                         <li>Free Hosting</li>
                         <li>Mobile Website</li>
                         <li>Advanced Analytics</li>
